--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.0",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "symfony/http-foundation": "^6.3"
     },
     "require-dev": {
         "pestphp/pest": "^2.16"
